force-app/main/default/objects/Support_Activity__c/Support_Activity__c.object-meta.xml
<CustomObject>
    <label>Support Activity</label>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>