force-app/main/default/objects/Support_Activity__c/fields/Admin_task__c.field-meta.xml
<CustomField>
    <fullName>Admin_task__c</fullName>
    <label>Admin task</label>
    <length>100</length>
    <type>Text</type>
</CustomField>