force-app/main/default/objects/Support_Activity__c/fields/Time_Spent_Mins__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Mins__c</fullName>
    <label>Time Spent (Mins.)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>